NEWS
0.49-1
     o	A new method, 'probe.match.objfun', constructs objective functions suitable for use in optimizers.

     o	'pomp' now depends on 'nloptr', which provides a suite of optimization algorithms.
     	This package can now be used in various methods for optimization of an objective function.

0.48-3
     o	Correct a bug in 'abc' to do with parameter transformation.

0.48-1
     o	Create new 'dprior' and 'rprior' slots for 'pomp' objects.
     	These will be used by the Bayesian methods (currently 'abc', 'bsmc', and 'pmcmc').
	The 'hyperparams' argument to these methods has been removed;
	hyperparameters are now treated just as any others.

     o	'bsmc' can now be called so that the particles are drawn from the prior distribution (as set by the 'rpior' slot).

     o	Some of the longer tests will only be run if an environment variable is set.

0.47-4
     o	Revisit 'dacca' bug.  Set negative compartments to zero along with compartments immediately downstream.

0.47-3
     o	Fix bug that arises only very occasionally in the 'dacca' cholera example.

     o	Modify 'dacca' model so that rare positivity violations are punished in a different way.
     	This modifies the formal model slightly.

0.47-2
     o	By default, 'pompBuilder' now creates all files in the temporary directory.

0.47-1
     o	'abc' implements Approximate Bayesian Computation for pomp models.

0.46-1
     o	'pompExample' now has an optional argument, 'envir', determining which environment the pomp object will be loaded into.

     o	'logmeanexp' now has an optional argument, 'se', allowing for computation of an approximate standard error.

0.45-8
     o	bug fix in 'gompertz' example.

0.45-7
     o	bug fix in 'pmcmc': Metropolis-Hastings ratio was incorrect except for flat priors!
	
0.45-6
     o	a fix so that 'pompBuilder' will find 'pomp.h' header file on Windows machines.  Thanks to Dave Hayman for finding the problem.

     o	new 'logmeanexp' function.
